@@ -825,8 +825,13 @@ typedef struct _DEBUG_EVENT {
 typedef struct _OVERLAPPED {
 	ULONG_PTR Internal;
 	ULONG_PTR InternalHigh;
+	union {
+		struct {
 	DWORD Offset;
 	DWORD OffsetHigh;
+	};
+	PVOID Pointer;
+	};
 	HANDLE hEvent;
 } OVERLAPPED,*POVERLAPPED,*LPOVERLAPPED;
 typedef struct _STARTUPINFOA {
